feat: Add endpoint to retrieve Certificate Revocation List (CRL) as a downloadable file
